# pixal-judge

./: .dockerignore  .env.example  .gitignore  GEMINI.md  MIGRATIONS.md  README.md  config.py  count.sh  data.js  docker-compose.dev.yml  docker-compose.yml  features.txt  index.html  main.py  pyproject.toml  refactor.md
POC/: check_oriantation.py
api/: cluster_routes.py  image_routes.py  main.py  schemas.py  tasks.py
client/: openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.json
database/: database.py  models.py
docs/: CELERY_CONCEPTS.md
server/: .env.development  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  database.py  docker-compose.yml  example.env  init.sql  pyproject.toml  requirements.txt  run_server.py  startup.py  startup_service.py  tasks.py
server/alembic/: env.py
server/alembic/versions/: 0c40df432af5_add_image_quality_fields.py  487c42b05f95_add_metadata.py  b8c2e1c76ce3_add_thumbnail.py  ba650b8c5046_create_association_table_and_migrate_.py  c69c13026fe2_add_missing_columns_to_images_table.py  c910e59362f6_add_missing_columns_to_images_table.py  cc526443c54f_add_ranking_fields_to_association_table.py  f20a4b6a74f4_add_image_hash.py
server/api/: cluster_routes.py  docker-compose.yml  image_routes.py  main.py  run_server.py  schemas.py  startup_service.py  tasks.py
server/api/database/: models.py
server/api/processing/: clustering.py
server/api/utils/: visualization.py
server/crud/: crud_batch.py  crud_image.py
server/database/: database.py  models.py
server/processing/: feature_extraction.py  grouping.py  metadata_extraction.py  quality_assessment.py
server/services/: batch_service.py  image_service.py  startup_service.py
server/src/: __init__.py
server/src/batches/: __init__.py  constants.py  crud.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
server/src/images/: __init__.py  constants.py  crud.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
server/src/processing/: __init__.py  clustering.py  constants.py  features.py  metadata.py  quality.py
server/utils/: exceptions.py  file_handling.py  helpers.py
(+91 files in other folders)
